2002-05-21  Andrew H. Chatham <andrew.chatham@duke.edu>
	* _oggmodule.c: Include another header
	
2002-02-17  Andrew H. Chatham <andrew.chatham@duke.edu>
	* _oggmodule.c, pyoggsyncstate.c, pyoggstreamstate.c,
	  pyoggpage.c, pyoggpacket.c, pyoggpackbuff.c:
	Set the ob_types in the init method instead of statically, as 
	MSVC complains.
	
2002-01-27  Andrew H. Chatham <andrew.chatham@duke.edu>
	* config_unix.py: Pass dir flags better
	* pyoggpackbuff.c (py_oggpack_reset), (py_oggpack_writeclear): 
		Return None from functions
	* bump version to 0.5
	
2001-09-02  Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: bumped version number to 0.4
	
2001-08-30  Andrew H. Chatham <andrew.chatham@duke.edu>

	* include/pyogg/pyogg.h, src/_oggmodule.c:
	Pass a copy of the implementation of arg_to_int64 so it can be shared
	by the Vorbis module.
	
2001-05-14  Andrew Chatham <andrew.chatham@duke.edu>
	* setup.py : Bumped  to version 0.3

	* src/general.c (arg_to_64): Changed to arg_to_int64. Removed
	DECREF and changed calling convention and return value. Also
	moved to <pyogg/pyogg.h> so it can be shared with vorbis-python

	* src/general.h: Fixed preprocessor warnings

	* src/pyoggpacket.c (py_ogg_packet_setattr): Changed to arg_to_int64

2001-05-01  Mike Coleman  <mkc@mathdogs.com>
	* test/oggtail.py: new script to show off some of ogg module
	
	* src/pyogg*.c: methods with no args now check that they're called
	this way

	* src/pyogg*.c: add repr functions

	* src/pyogg*.c: add type checking for PyTypeObject function table
	
	* src/pyoggpacket.c: add get/set granulepos attribute
	* src/pyoggpage.c: add set pageno attribute

	* src/pyoggstreamstate.c: implement pagein, packetout methods
	
	* src/pyoggsyncstate.c: implement bytesin, pageseek methods,
	comment out unneeded wrote method

	* src/pyogg*state.c: fix free of bogus pointer in dealloc
	
	
3-27-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/_oggmodule.c: Added OggSyncState
